src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Of_Units_Managed__c</fullName>
        <inlineHelpText>Related Question for Property Management</inlineHelpText>
        <label>Ave. # of Units</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>More than 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 -200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201 - 600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Off_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Off Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Supplier__c</fullName>
        <label>Other Supplier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Crew_Score__c</fullName>
        <label>Paint Crew Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paint_Crew_Type__c</fullName>
        <inlineHelpText>Question Related to General Contractor</inlineHelpText>
        <label>Employee Type</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phone_Length__c</fullName>
        <description>It will calculate length of the digits filled in the phone field.</description>
        <formula>LEN( Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postion_Title__c</fullName>
        <label>Postion/Title</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect, Designer, Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner, Principal or Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President &amp; CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP/General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Brand__c</fullName>
        <label>Preferred Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Behr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex (Frazee/Kwal/Color Wheel/Parker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn-Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICI/Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG (Olympic/Pittsburgh/Porter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin-Williams</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Brands__c</fullName>
        <label>Preferred Brands</label>
        <picklist>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex (Frazee/Kwal/Color Wheel/Parker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn-Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly-Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG (Olympic/Pittsburg/Porter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin-Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both Spanish and English</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Supplier__c</fullName>
        <label>Primary Supplier (Non Behr)</label>
        <picklist>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex (Frazee/Kwal/Color Wheel/Parker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG (Olympic/Pittsburg/Porter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin-Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Occupation__c</fullName>
        <label>Primary Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture, Planner, Designer, Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials/Lumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Products/Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Coverings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Building Manufacture (Panelized &amp; Log)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance and Title Companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Exporter - Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing of Modular/Panelized/Log Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masonry/Stone Work/Tile/Plaster Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily Development - Affordable Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily Development - Condo/Coop Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily Development - Market Rate Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily General Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Wholesale Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint/Wall Coverings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planner/Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing/HVAC/Insulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manufacture and/or Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate/Investing/Appraisals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Interest__c</fullName>
        <label>Primary Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Interior Paint and Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Specialty Paints and Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faux &amp; Decorative Finishes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete &amp; Masonry Waterproofers and Sealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Specialty Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Paint and Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Specialty Paint and Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Stains &amp; Waterproofers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Specialty Coatings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Primary Product Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_SIC_Description__c</fullName>
        <label>Primary SIC Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_SIC__c</fullName>
        <label>Primary SIC</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Store_Clone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Store Clone</label>
        <referenceTo>Home_Depot_Store__c</referenceTo>
        <relationshipLabel>Leads (Primary Store Clone)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Store_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Store #</label>
        <referenceTo>Home_Depot_Store__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Store__c</fullName>
        <label>Primary Store</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rep_Email__c</fullName>
        <description>To be populated during workflow to be used when assiging pro via trigger</description>
        <label>Pro Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pro_Rep_Name__c</fullName>
        <description>Pro Rep name to be populated via workflow based on store or zip and used for instore rep notifications.</description>
        <label>Pro Rep Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Account_Number__c</fullName>
        <inlineHelpText>Number set up in Pro Rewards (can differ from contact number)</inlineHelpText>
        <label>Pro Rewards Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Activation_Store_del__c</fullName>
        <inlineHelpText>Store account was set up on Pro Rewards</inlineHelpText>
        <label>Pro Rewards Activation Store</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rewards_Member__c</fullName>
        <label>Pro Rewards Member</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Exterior Paints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior Wood Stains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faux &amp; Decorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Paints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Int./Ext. Concrete Stains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterproofers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood &amp; Concrete Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Product(s) Not Listed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None/Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Detail__c</fullName>
        <description>Detail field about the project once Sales Rep had contact with the ARCAT lead</description>
        <label>Project Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Project name for ARCAT leads</description>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Timeline__c</fullName>
        <label>Project Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>ARCAT drop down list for project type</description>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Religion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Properties_Managed_Non_Residential__c</fullName>
        <label># Properties Managed (Commercial)</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Properties_Managed_Residential__c</fullName>
        <label># Properties Managed (Residential)</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publication_Name__c</fullName>
        <description>Trade publication we currently advertise in</description>
        <label>Publication Name</label>
        <picklist>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durability &amp; Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools of the Trade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RPSM__c</fullName>
        <formula>Owner:User.RPSM_New__r.FirstName &amp; &quot; &quot; &amp; Owner:User.RPSM_New__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVP__c</fullName>
        <formula>Owner:User.RVP__r.FirstName &amp;  &quot; &quot;&amp;   Owner:User.RVP__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RVP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Assigned_To__c</fullName>
        <description>InStore Rep name</description>
        <label>InStore Rep Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <description>Reference number for SMARTLEAD</description>
        <label>Reference Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Role Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither/Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Volume_Range__c</fullName>
        <label>Sales Volume Range</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_SIC_1__c</fullName>
        <label>Secondary SIC #1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_SIC_2__c</fullName>
        <label>Secondary SIC #2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_SIC_Description_1__c</fullName>
        <label>Secondary SIC Description #1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_SIC_Description_2__c</fullName>
        <label>Secondary SIC Description #2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Size__c</fullName>
        <label>Select Size</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_SIC_Code__c</fullName>
        <label>Selected_SIC_Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_SIC_Desc__c</fullName>
        <label>Selected_SIC_Desc</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Requested__c</fullName>
        <label>Services Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Color Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery/Factory Tinting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express Store Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Site Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms/Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Services(s) Not Listed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Requested</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <description>Shipping Address</description>
        <inlineHelpText>Enter if shipping address is different</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_Upcoming_Project__c</fullName>
        <inlineHelpText>Related Question to Architect, Designer, Exporter,  General Contractor, Paint and Wall Covering, Property Management, Remodeler, Specifier</inlineHelpText>
        <label>Size of Upcoming Project</label>
        <picklist>
            <controllingField>Have_Upcoming_Projects__c</controllingField>
            <picklistValues>
                <fullName>&lt;50 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-124 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;125 Gallons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Project__c</fullName>
        <label>Start Date of Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Lead_Source__c</fullName>
        <description>Sub lead source</description>
        <label>Sub-Lead Source</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Contractor Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THD Pro Blitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rep Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTP Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Magazine Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web to Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BehrPro Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Trade Association/Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Walk In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>THD_National_Account_Show__c</fullName>
        <label>THD National Account Show</label>
        <picklist>
            <picklistValues>
                <fullName>Crawford Contractor Connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Apartment Association (NAA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Institute of Government Procurement (NIGP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Association of Housing &amp; Redevelopment (NAHRO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOMA (Building Owner Management Association)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Title Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Association_Affiliation__c</fullName>
        <label>Trade Association/Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>AAHOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AH4R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAH - Colony American Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial PMCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD PAR Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD PPSS Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IREM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Manager Conversion Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProTect Painters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Union Painters (IUPAT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VYS - Vineyard Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>